Testing mappers of products and sales